@@ -1,3 +1,8 @@
+1999-08-02  MORIOKA Tomohiko  <tomo@m17n.org>
+
+	* mime-view.el (mime-preview-follow-current-entity):
+	Don't use `mime-entity-buffer'.
+
 1999-05-17  KOSEKI Yoshinori  <kose@yk.NetLaputa.ne.jp>
 
 	* mime-pgp.el (mime-verify-application/pgp-signature): Specify the
